# Source_to_Sea

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
Notebooks/: 01_data_cleaning.ipynb  02_Q1_plastic_sources.ipynb  03_Q2_accumulation.ipynb  04_Q3_marine_life.ipynb  05_Q4_cleanup_impact.ipynb  export_for_tableau.ipynb  modular.py  modular_01_data_cleaning.ipynb  modular_02_q1_plastic_sources.ipynb  modular_03_q2_accumulation.ipynb  modular_04_q3_marine_life.ipynb  modular_05_q4_cleanup_impact.ipynb  modular_06_q5_where_to_intercept.ipynb  modular_07_q6_what if scenarios.ipynb
Notebooks/.ipynb_checkpoints/: modular_06_q5_where_to_intercept-checkpoint.ipynb
SQL/: RQ2.sql  RRI Question2.sql  RRI Question5.sql  RRI subqueries.sql  River-Risk-Index.sql  StS Question1.sql  StS Question2.sql  StS Question5.sql  StS subqueries.sql
Scr/: cleaning_functions.py  q1_functions.py  q2_functions.py
Src/: cleaning_functions.py  fetch_river_names.py  q1_plastic_sources_functions.py  q2_accumulation_functions.py  q3_marine_life_functions.py  q4_cleanup_impact_functions.py  q5_where_to_intercept_functions.py  q6_what_if_functions.py
Streamlit/: Home.py  app.py
Streamlit/assets/: clean_ocean.avif
Streamlit/components/: shared.py
Streamlit/pages/: 01_introduction.py  01_overview.py  02_State_of_the_World.py  02_explore_country.py  (+12 more)
Tableau/: Source to Sea - a data-driven analysis of ocean plastic.twbx  ~Source to Sea - a data-driven analysis of ocean plastic__12636.twbr  ~Source to Sea - a data-driven analysis of ocean plastic__7128.twbr
